# inoread

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  dune-project  esy.json  fly.toml  inoread.opam  package-lock.json  package.json  tailwind.config.js
assets/epubs/: 67363.epub
client/: dune  grid.ml  styles.css
scripts/: build-js.sh  build.sh  dev.sh  format.sh
server/: dune  home_page.ml  prelude.ml  projects_page.ml  server.eml.ml  server.ml  styles.css  template.eml.ml  template.ml  writings_page.ml
tools/: README.md
writing/: test.md
